--- a/index.html
+++ b/index.html
@@ -5,19 +5,23 @@
     <meta charset="=UTF-8">
     <meta name="viewport" content="width=device-width, initia-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script src="js/main.js"></script>
     <link rel="stylesheet" href="css/style.css">
-    <title>My Weekend in ...Garage!</title>
+    <link rel="stylesheet" href="css/buttonStyles.css">
+    <title>Other Weekend in ...Garage!</title>
 </head>
 
 <body>
     <section class="landing">
         <div class="landing-inner">
-            <h1>My weekend in ... Garage</h1>
+            <h1>Other weekend in ... Garage</h1>
             <p>(in three minutes)</p>
             <h1 class="countdown"></h1>
+            <div id="buttonContainer">
+                <span class="startBtn" onclick="startCount()">Start</span>
+            </div>
         </div>
     </section>
-    <script src="js/main.js"></script>
 </body>
 
 </html>
